# ImprovedRustAudio

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  build.rs
include/Audio/: Audio.h  AudioBuilder.h  AudioEngine.h  types.h
src/: api.rs  audio.rs  engine.rs  lib.rs  main.cpp  main.rs  manager.rs  utils.rs
src/Audio/: Audio.cpp  AudioBuilder.cpp  AudioEngine.cpp
