[package]
name = "improved_rust_audio"
version = "0.1.0"
edition = "2024"

[dependencies]
cxx = "1.0.158"
rodio = { version = "0.20.1", features = ["symphonia-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = { version = "0.5.4", features = ["all"] }
tracing = "0.1.41"

[build-dependencies]
cxx-build = "1.0"

[lib]
name = "improved_rust_audio"
crate-type = ["cdylib"]
